Update Vercel configuration for API functions

--- a/vercel.json
+++ b/vercel.json
@@ -1,9 +1,7 @@
 {
-  "version": 2,
-  "builds": [
-    {
-      "src": "api/comed/index.js",
-      "use": "@vercel/node"
+  "functions": {
+    "api/**/*.js": {
+      "runtime": "@vercel/node"
     }
-  ]
+  }
 }
