--- a/vercel.json
+++ b/vercel.json
@@ -1,7 +1,15 @@
 {
-  "functions": {
-    "api/**/*.js": {
-      "runtime": "@vercel/node"
+  "version": 2,
+  "builds": [
+    {
+      "src": "api/comed/index.js",
+      "use": "@vercel/node"
     }
-  }
+  ],
+  "routes": [
+    {
+      "src": "/api/comed",
+      "dest": "/api/comed/index.js"
+    }
+  ]
 }
